--- a/guide.html
+++ b/guide.html
@@ -7,20 +7,43 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Guide</title>
   </head>
-  <header>
-    <nav class="main-nav">
-      <a class="inActive" href="./index.html">Hem</a>
-      <a class="active" href="./guide.html">Spela</a>
+<header>
+      <nav class="main-nav">
+        <a href="https://lqgstudios.github.io/" class="lqgFont">
+          <img
+            class="tillLQG"
+            src="./Bilder/icon.png"
+            alt="till lqg-hemsidan"
+          />
+          LQG Studios
+        </a>
 
-      <a class="inActive" href="./download.html">Ladda ner spelet</a>
+        <a class="inActive" href="./index.html">Hem</a>
+        <a class="active" href="./guide.html">Spela</a>
 
-      <a class="inActive" href="./contact.html">Kontakta oss</a>
+        <a class="inActive" href="./download.html">Ladda ner spelet</a>
 
-      <a class="inActive" href="./pictures.html">Galleri</a>
-    </nav>
-  </header>
+        <a class="inActive" href="./contact.html">Kontakta oss</a>
+
+        <a class="inActive" href="./pictures.html">Galleri</a>
+      </nav>
+      <br />
+      <nav class="main-nav-phone-ver">
+        <a href="#home" class="active">Logo</a>
+        <!-- Navigation links (hidden by default) -->
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          -->
+      </nav>
+    </header>
   <body>
-    <h1>Hur du spelar spelet</h1>
+    <h1>Hur du spelar spelet<img src="./Bilder/loggan.png" alt="Logo" class="logo" /></h1>
     <p>
       <ul>
         <li>
@@ -33,6 +56,8 @@
         tryck sedan på knappen för att starta spelet.</li>
       </ul>
     </p>
+    <br><br><br><br>    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<br><br>
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
