--- a/index.html
+++ b/index.html
@@ -7,20 +7,22 @@
     <title>Hem</title>
     <link rel="stylesheet" href="./style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
+      href="https://fonts.googleapis.com/style?family=Kanit:wght@300&display=swap"
       rel="stylesheet"
     />
   </head>
   <body>
     <header>
       <nav class="main-nav">
-        <a href="https://lqgstudios.github.io/">
+        <a href="https://lqgstudios.github.io/" class="lqgFont">
           <img
             class="tillLQG"
-            src="./Bilder/Skärmbild 2022-04-25 085118.png"
-            alt="lol"
+            src="./Bilder/icon.png"
+            alt="till lqg-hemsidan"
           />
+          LQG Studios
         </a>
+
         <a class="active" href="./index.html">Hem</a>
         <a class="inActive" href="./guide.html">Spela</a>
 
@@ -29,10 +31,8 @@
         <a class="inActive" href="./contact.html">Kontakta oss</a>
 
         <a class="inActive" href="./pictures.html">Galleri</a>
-        <a href="./index.html">
-          <img src="./Bilder/loggan.png" alt="Logo" class="antiTillLQG" />
-        </a>
       </nav>
+      <br />
       <nav class="main-nav-phone-ver">
         <a href="#home" class="active">Logo</a>
         <!-- Navigation links (hidden by default) -->
@@ -41,13 +41,15 @@
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
         </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          -->
       </nav>
     </header>
-    <h1>Rule of Division</h1>
+    <h1>
+      Rule of Division <img src="./Bilder/loggan.png" alt="Logo" class="logo" />
+    </h1>
     <div class="top">
       <div class="rectangle">
         <h3>Överblick</h3>
@@ -69,7 +71,14 @@
       </div>
       <div class="nyheter">
         <div class="artikel">
+          <h4>Skins är nu tillgängliga i spelet!</h4>
+          <h5>Kan du låsa upp alla?</h5>
+          <a href="https://ruleofdivision.github.io/play">SPELA NU!</a>
+        </div>
+
+        <div class="artikel">
           <h4>Webbversionen är ute nu!</h4>
+          <h5>Webbversionen är spelbar här på hemsidan.</h5>
           <a href="https://ruleofdivision.github.io/play">SPELA NU!</a>
         </div>
       </div>
@@ -107,19 +116,16 @@
       svärd. Vårt mål är att hitta ett roligt sätt för elever att bli bättre på
       matte!
     </p>
-    <div class="image">
-      <img src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
-    </div>
+    <img class="image" src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
     <h3 id="vadLär">Vad lär vi ut?</h3>
     <p>
       Vi lär ut räknesättet division på en mellanstadienivå. Eleverna kommer att
       lära sig vilka tal som kan delas jämnt av varandra. De kommer till att
       börja med lära sig sambandet mellan multiplikation och division. De kommer
-      att få olika svårighetsnivåer att välja
+      att få olika svårighetsnivåer att välja.
     </p>
-    <div class="image">
-      <img src="./Bilder/Division_begrepp.png" alt="2nd image" />
-    </div>
+
+    <img class="image" src="./Bilder/Division_begrepp.png" alt="2nd image" />
     <h3 id="förLär">För Lärare</h3>
     <p>
       Det här spelet är tänkt att användas tillsammans med er vanliga
@@ -128,86 +134,27 @@
     <h3 id="undervisning">Hur passar vi in i undervisningen?</h3>
     <p>
       Vårt spel kan hjälpa till att göra matematik lite roligare. Det skulle
-      kunna fungera som en matteläxa att exempelvis ta sig igenom 10 banor i
+      kunna fungera som en matteläxa att exempelvis ta sig igenom 10 rundor i
       spelet.
-      <br />
-      <br />
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, fugit
-      provident, rem voluptatibus maxime recusandae tempora corrupti neque
-      suscipit ea perferendis magni adipisci explicabo dignissimos quasi
-      laudantium repudiandae labore illum repellendus enim alias asperiores.
-      Sunt iure earum quae est dolorem eligendi laboriosam id tempora
-      reiciendis, quis et, quasi eaque doloribus illum provident facilis,
-      voluptatum ex. Dicta, ipsam laboriosam quod eligendi ea sunt fugit iste
-      dolorem, natus at, consequuntur pariatur dolores quasi necessitatibus
-      sapiente quia sed dolor ratione! Necessitatibus nam numquam, consectetur
-      optio cumque molestias dolorum vitae nobis in quos, odit corporis hic
-      placeat neque cum dolorem excepturi officiis voluptatem, eius consequatur
-      at omnis assumenda. Officiis, rerum dolores! Nisi saepe quas pariatur nemo
-      debitis praesentium suscipit nesciunt mollitia quidem soluta, ullam animi,
-      rem cupiditate? Natus mollitia, totam maxime optio ducimus alias nemo?
-      Excepturi asperiores illo minus libero delectus tempora aliquid voluptatum
-      ratione magnam nulla enim accusamus, quos ad inventore adipisci ducimus
-      vitae aspernatur temporibus at ab incidunt perspiciatis porro id?
-      Aspernatur harum qui, amet velit nulla odio error adipisci esse molestiae
-      dolorum laborum quod neque labore repellendus facilis molestias voluptate
-      fugiat incidunt iste numquam voluptatibus dolor eos quas? Nihil maxime
-      animi amet hic eius nulla quos laudantium. Earum, ratione alias explicabo,
-      maxime nam, blanditiis illo laudantium perspiciatis nisi molestias harum
-      impedit. Facere quae molestiae labore! Voluptas odio eum laboriosam ex
-      iste tenetur doloribus ab inventore eveniet repellendus quis accusamus
-      dignissimos enim repellat facere modi hic, cupiditate veniam qui omnis?
-      Dolore dolor doloremque quaerat nostrum sunt iure blanditiis facere earum
-      aperiam voluptatem. Iure maiores suscipit sapiente porro perspiciatis at
-      dolorum voluptatibus minus similique. Eos aperiam dignissimos unde magni
-      adipisci id debitis, nam delectus corporis ad fugiat ullam iusto repellat
-      nihil deleniti, dolor voluptatem culpa earum consequuntur. Perspiciatis
-      eligendi tempora ducimus voluptate ut consectetur voluptas quaerat
-      explicabo amet ipsum dolores veniam, labore, qui exercitationem similique
-      deleniti minus excepturi blanditiis cum, repellendus illo quis veritatis
-      nam facilis. Atque, odit asperiores? Praesentium fugit dolor expedita
-      nihil, necessitatibus magnam molestiae optio a totam accusantium molestias
-      officiis et recusandae mollitia quod nesciunt, illum ducimus deleniti
-      autem maxime aut dicta! Accusantium eveniet quam aliquid! Dignissimos
-      animi eaque debitis et illum quasi repellendus, deserunt sed nulla dicta
-      autem minus rem modi qui quis doloremque quibusdam inventore suscipit
-      accusamus. Dolor, optio facilis. Maxime ea repellat, consequatur, sit
-      temporibus aliquam a similique harum doloribus blanditiis optio. Dicta
-      quidem sequi rerum et sed placeat id necessitatibus corporis debitis!
-      Natus aut magni temporibus odit recusandae minima iusto. Hic eligendi
-      consequatur quis quibusdam distinctio pariatur inventore alias libero
-      rerum eaque minima fuga voluptate odit officia, velit facere eius ullam
-      repellendus eum. Voluptatem rerum mollitia, explicabo illo expedita
-      soluta! Placeat eum, fugiat porro accusamus ipsum magnam laborum qui nobis
-      molestiae magni eveniet doloribus, repudiandae facilis voluptatem dolores
-      asperiores? Nam delectus harum eligendi hic voluptatum tempore quibusdam,
-      minima perspiciatis ea ipsam repellendus ut beatae eaque nisi quidem
-      eveniet, explicabo veniam doloremque libero provident, tenetur assumenda
-      saepe temporibus possimus! Consequatur earum facere fugit dolor delectus
-      voluptatem non quo culpa accusantium nulla facilis placeat ut, temporibus,
-      odit nostrum. Quia magni earum quam mollitia, dolores id atque et
-      dignissimos, explicabo omnis similique laborum amet eveniet officiis quasi
-      natus inventore nulla modi. Iusto iste voluptate quos mollitia porro ea
-      beatae doloribus nulla non velit, corporis sequi quae reiciendis itaque
-      sit. Sapiente molestiae ab quibusdam et animi eligendi! Dolorum
-      perspiciatis hic maxime velit distinctio ea officiis qui aspernatur, illum
-      quisquam minima reiciendis quasi repellendus impedit magnam placeat autem
-      illo id ullam laborum. Asperiores, ab id saepe doloremque consequuntur
-      laboriosam atque quo in! Aspernatur nam aliquid distinctio. Deserunt
-      praesentium dolorem molestias quibusdam suscipit, rerum saepe esse iste
-      nesciunt eius quidem vel atque adipisci laudantium, sapiente voluptate
-      omnis inventore ratione velit. Asperiores autem quas veniam, praesentium
-      ducimus tempore nam consequuntur, aut doloremque, exercitationem sit
-      similique expedita. Numquam reprehenderit repellendus sit corrupti magnam
-      dolor velit quae reiciendis, nam nemo odio inventore enim ab mollitia,
-      veniam minus quaerat minima illo accusantium quis quam exercitationem?
-      Cumque voluptatem laudantium illum sequi odit corrupti mollitia tenetur
-      dolores, reiciendis atque sed qui, eius praesentium recusandae vitae,
-      similique consectetur provident dicta inventore a. Esse commodi, illum rem
-      deleniti odit iure aspernatur! Ipsum tempore quaerat animi voluptatem vel
-      accusamus eum explicabo ratione odit corporis, eius quasi cum nostrum. Ad,
-      modi enim.
     </p>
+    <p>
+      Vi vänder oss till mellanstadieelever som är vår målgrupp. Dessa elever
+      lär sig gångertabellerna och behöver därmed även kunna division eftersom
+      att de två räknesätten hör ihop. I mellanstadiet, främst i 4:an, lär sig
+      elever gångertabeller och då skulle det vara lämpligt att följa upp det
+      med stort fokus på division för att befästa informationen. Division som
+      räknesätt kan göras mycket lättare med några knep, till exempel att kolla
+      på entalet för att snabbt se om man kan förkorta hela talet med exempelvis
+      2. Det finns enkla trick för att avgöra vilka tal som är delbara med vilka
+      andra. De här knepen är bra att lära ut och det kan vi göra med ett spel.
+      Vi gjorde en enkät som elever i åk.4 och åk.6 svarade på. Från våra
+      resultat kunde vi avgöra att nästan alla i båda årskurserna tycker att
+      matematik är svårt eller åtminstone lite svårt. Vi hoppas därför kunna
+      hjälpa till!
+    </p>
+
+    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
