--- a/pictures.html
+++ b/pictures.html
@@ -10,6 +10,15 @@
   <body>
     <header>
       <nav class="main-nav">
+        <a href="https://lqgstudios.github.io/" class="lqgFont">
+          <img
+            class="tillLQG"
+            src="./Bilder/icon.png"
+            alt="till lqg-hemsidan"
+          />
+          LQG Studios
+        </a>
+
         <a class="inActive" href="./index.html">Hem</a>
         <a class="inActive" href="./guide.html">Spela</a>
 
@@ -19,18 +28,46 @@
 
         <a class="active" href="./pictures.html">Galleri</a>
       </nav>
+      <br />
+      <nav class="main-nav-phone-ver">
+        <a href="#home" class="active">Logo</a>
+        <!-- Navigation links (hidden by default) -->
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          -->
+      </nav>
     </header>
-    <h1>Så här ser spelet ut!</h1>
-    <div class="image">
-      <img src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
-    </div>
+    <h1>
+      Så här ser spelet ut!<img
+        src="./Bilder/loggan.png"
+        alt="Logo"
+        class="logo"
+      />
+    </h1>
+
+    <img class="image" src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
+
     <p>
-      Som det går att se på bilden håller vi fortfarande på att utveckla spelet.
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque pariatur
-      veniam earum, vitae minima exercitationem expedita, aliquid, quod
-      consequuntur deserunt laudantium officiis illum! Dolorem, fugiat quasi
-      nulla tempore libero autem.
+      Bilden är en skärmbild tagen i unity-programmet. Det är programmet vi har
+      använt för att skapa spelet.
     </p>
+
+    <img class="bottomImage" src="./Bilder/enemy1.png" alt="concept art" />
+
+    <p>
+      Detta är den första och enda skissen av spelets fiende. Den har inget
+      officiellt namn än. Vissa har sagt att den ser ut som en korsning mellan
+      en räv, en skorpion och en ekorre.
+    </p>
+    <br /><br /><br /><br />
+    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
