--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,15 @@
   <body>
     <header>
       <nav class="main-nav">
+        <a href="https://lqgstudios.github.io/" class="lqgFont">
+          <img
+            class="tillLQG"
+            src="./Bilder/icon.png"
+            alt="till lqg-hemsidan"
+          />
+          LQG Studios
+        </a>
+
         <a class="inActive" href="./index.html">Hem</a>
         <a class="inActive" href="./guide.html">Spela</a>
 
@@ -19,8 +28,28 @@
 
         <a class="inActive" href="./pictures.html">Galleri</a>
       </nav>
+      <br />
+      <nav class="main-nav-phone-ver">
+        <a href="#home" class="active">Logo</a>
+        <!-- Navigation links (hidden by default) -->
+        <div id="myLinks">
+          <a href="#news">News</a>
+          <a href="#contact">Contact</a>
+          <a href="#about">About</a>
+        </div>
+        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          -->
+      </nav>
     </header>
-    <h1>Hör av er med tips, frågor eller feedback via mail:</h1>
+    <h1>
+      Hör av er med tips, frågor eller feedback via mail:<img
+        src="./Bilder/loggan.png"
+        alt="Logo"
+        class="logo"
+      />
+    </h1>
     <input
       style="visibility: hidden"
       type="text"
@@ -62,8 +91,11 @@
     </script>
 
     <p>
-      Vi är tacksamma för all feedback ni skickar efter att ha testat spelet
+      Vi är tacksamma för all feedback ni skickar efter att ha testat spelet!
     </p>
+    <br /><br /><br /><br />
+    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
