--- a/download.html
+++ b/download.html
@@ -9,6 +9,11 @@
   </head>
   <header>
     <nav class="main-nav">
+      <a href="https://lqgstudios.github.io/" class="lqgFont">
+        <img class="tillLQG" src="./Bilder/icon.png" alt="till lqg-hemsidan" />
+        LQG Studios
+      </a>
+
       <a class="inActive" href="./index.html">Hem</a>
       <a class="inActive" href="./guide.html">Spela</a>
 
@@ -18,15 +23,44 @@
 
       <a class="inActive" href="./pictures.html">Galleri</a>
     </nav>
+    <br />
+    <nav class="main-nav-phone-ver">
+      <a href="#home" class="active">Logo</a>
+      <!-- Navigation links (hidden by default) -->
+      <div id="myLinks">
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          -->
+    </nav>
   </header>
   <body class="dlBackground">
     <h1>
-      Länkar till att ladda ner spelet (det går inte att ladda ner än för det är
-      inte färdigt):
+      Länkar till att ladda ner spelet:<img
+        src="./Bilder/loggan.png"
+        alt="Logo"
+        class="logo"
+      />
     </h1>
-
+    <p>
+      Observera att det går inte att ladda ner mac-versionen än för den är inte
+      färdig.
+    </p>
     <a href="RuleOfDivision.rar"><h3>Ladda ner för Windows</h3></a>
     <h3>Ladda ner för Mac</h3>
+
+    <br />
+    <h3>
+      Spela spelet online istället:
+      <a href="https://ruleofdivision.github.io/play">Här</a>
+    </h3>
+    <br /><br /><br />
+    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
