--- a/download.html
+++ b/download.html
@@ -46,12 +46,12 @@
         class="logo"
       />
     </h1>
-    <p>
+    <h3>
       Observera att det går inte att ladda ner mac-versionen än för den är inte
       färdig.
     </p>
-    <a href="RuleOfDivision.rar"><h3>Ladda ner för Windows</h3></a>
-    <h3>Ladda ner för Mac</h3>
+    <a href="RuleOfDivision.rar"><p>Ladda ner för Windows</p></a>
+    <a href="tyvärr.txt"><p>Ladda ner för Mac</p></a>
 
     <br />
     <h3>
