--- a/index.html
+++ b/index.html
@@ -41,10 +41,6 @@
           <a href="#contact">Contact</a>
           <a href="#about">About</a>
         </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          -->
       </nav>
     </header>
     <h1>
@@ -71,14 +67,18 @@
       </div>
       <div class="nyheter">
         <div class="artikel">
+          <h4>Webbversionen är ute nu!</h4>
+          <h5>Webbversionen är spelbar här på hemsidan.</h5>
+          <a href="https://ruleofdivision.github.io/play">SPELA NU!</a>
+        </div>
+        <div class="artikel">
           <h4>Skins är nu tillgängliga i spelet!</h4>
           <h5>Kan du låsa upp alla?</h5>
           <a href="https://ruleofdivision.github.io/play">SPELA NU!</a>
         </div>
-
         <div class="artikel">
-          <h4>Webbversionen är ute nu!</h4>
-          <h5>Webbversionen är spelbar här på hemsidan.</h5>
+          <h4>Version 1.0 är ute!</h4>
+          <h5>Den är tillgänglig för både windows och webben!</h5>
           <a href="https://ruleofdivision.github.io/play">SPELA NU!</a>
         </div>
       </div>
