--- a/guide.html
+++ b/guide.html
@@ -12,7 +12,7 @@
         <a href="https://lqgstudios.github.io/" class="lqgFont">
           <img
             class="tillLQG"
-            src="./Bilder/icon.png"
+            src="icon.png"
             alt="till lqg-hemsidan"
           />
           LQG Studios
@@ -43,7 +43,7 @@
       </nav>
     </header>
   <body>
-    <h1>Hur du spelar spelet<img src="./Bilder/loggan.png" alt="Logo" class="logo" /></h1>
+    <h1>Hur du spelar spelet<img src="loggan.png" alt="Logo" class="logo" /></h1>
     <p>
       <ul>
         <li>
@@ -62,7 +62,7 @@
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
       <a href="https://lqgstudios.github.io/">
-        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+        <img src="Skärmbild 2022-04-25 085118.png" alt="LQG" />
       </a>
       <br />
       <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
