--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
     <header>
       <nav class="main-nav">
         <a href="https://lqgstudios.github.io/" class="lqgFont">
-          <img
-            class="tillLQG"
-            src="./Bilder/icon.png"
-            alt="till lqg-hemsidan"
-          />
+          <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
           LQG Studios
         </a>
 
@@ -43,9 +39,7 @@
         </div>
       </nav>
     </header>
-    <h1>
-      Rule of Division <img src="./Bilder/loggan.png" alt="Logo" class="logo" />
-    </h1>
+    <h1>Rule of Division <img src="loggan.png" alt="Logo" class="logo" /></h1>
     <div class="top">
       <div class="rectangle">
         <h3>Överblick</h3>
@@ -116,7 +110,7 @@
       svärd. Vårt mål är att hitta ett roligt sätt för elever att bli bättre på
       matte!
     </p>
-    <img class="image" src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
+    <img class="image" src="Skarmbild_3.png" alt="1st Game image" />
     <h3 id="vadLär">Vad lär vi ut?</h3>
     <p>
       Vi lär ut räknesättet division på en mellanstadienivå. Eleverna kommer att
@@ -125,7 +119,7 @@
       att få olika svårighetsnivåer att välja.
     </p>
 
-    <img class="image" src="./Bilder/Division_begrepp.png" alt="2nd image" />
+    <img class="image" src="Division_begrepp.png" alt="2nd image" />
     <h3 id="förLär">För Lärare</h3>
     <p>
       Det här spelet är tänkt att användas tillsammans med er vanliga
@@ -153,13 +147,13 @@
       hjälpa till!
     </p>
 
-    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <img class="bottomImage" src="loggan.png" alt="Loggan" />
     <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
       <a href="https://lqgstudios.github.io/">
-        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+        <img src="Skärmbild 2022-04-25 085118.png" alt="LQG" />
       </a>
       <br />
       <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
