--- a/contact.html
+++ b/contact.html
@@ -11,11 +11,7 @@
     <header>
       <nav class="main-nav">
         <a href="https://lqgstudios.github.io/" class="lqgFont">
-          <img
-            class="tillLQG"
-            src="./Bilder/icon.png"
-            alt="till lqg-hemsidan"
-          />
+          <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
           LQG Studios
         </a>
 
@@ -45,7 +41,7 @@
     </header>
     <h1>
       Hör av er med tips, frågor eller feedback via mail:<img
-        src="./Bilder/loggan.png"
+        src="loggan.png"
         alt="Logo"
         class="logo"
       />
@@ -94,13 +90,13 @@
       Vi är tacksamma för all feedback ni skickar efter att ha testat spelet!
     </p>
     <br /><br /><br /><br />
-    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <img class="bottomImage" src="loggan.png" alt="Loggan" />
     <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
       <a href="https://lqgstudios.github.io/">
-        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+        <img src="Skärmbild 2022-04-25 085118.png" alt="LQG" />
       </a>
       <br />
       <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
