--- a/download.html
+++ b/download.html
@@ -10,7 +10,7 @@
   <header>
     <nav class="main-nav">
       <a href="https://lqgstudios.github.io/" class="lqgFont">
-        <img class="tillLQG" src="./Bilder/icon.png" alt="till lqg-hemsidan" />
+        <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
         LQG Studios
       </a>
 
@@ -41,7 +41,7 @@
   <body class="dlBackground">
     <h1>
       Länkar till att ladda ner spelet:<img
-        src="./Bilder/loggan.png"
+        src="loggan.png"
         alt="Logo"
         class="logo"
       />
@@ -59,13 +59,13 @@
       <a href="https://ruleofdivision.github.io/play">Här</a>
     </h3>
     <br /><br /><br />
-    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <img class="bottomImage" src="loggan.png" alt="Loggan" />
     <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
       <a href="https://lqgstudios.github.io/">
-        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+        <img src="Skärmbild 2022-04-25 085118.png" alt="LQG" />
       </a>
       <br />
       <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
