--- a/pictures.html
+++ b/pictures.html
@@ -11,11 +11,7 @@
     <header>
       <nav class="main-nav">
         <a href="https://lqgstudios.github.io/" class="lqgFont">
-          <img
-            class="tillLQG"
-            src="./Bilder/icon.png"
-            alt="till lqg-hemsidan"
-          />
+          <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
           LQG Studios
         </a>
 
@@ -44,21 +40,17 @@
       </nav>
     </header>
     <h1>
-      Så här ser spelet ut!<img
-        src="./Bilder/loggan.png"
-        alt="Logo"
-        class="logo"
-      />
+      Så här ser spelet ut!<img src="loggan.png" alt="Logo" class="logo" />
     </h1>
 
-    <img class="image" src="./Bilder/Skarmbild_3.png" alt="1st Game image" />
+    <img class="image" src="Skarmbild_3.png" alt="1st Game image" />
 
     <p>
       Bilden är en skärmbild tagen i unity-programmet. Det är programmet vi har
       använt för att skapa spelet.
     </p>
 
-    <img class="bottomImage" src="./Bilder/enemy1.png" alt="concept art" />
+    <img class="bottomImage" src="enemy1.png" alt="concept art" />
 
     <p>
       Detta är den första och enda skissen av spelets fiende. Den har inget
@@ -66,13 +58,13 @@
       en räv, en skorpion och en ekorre.
     </p>
     <br /><br /><br /><br />
-    <img class="bottomImage" src="./Bilder/loggan.png" alt="Loggan" />
+    <img class="bottomImage" src="loggan.png" alt="Loggan" />
     <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
       <a href="https://lqgstudios.github.io/">
-        <img src="./Bilder/Skärmbild 2022-04-25 085118.png" alt="LQG" />
+        <img src="Skärmbild 2022-04-25 085118.png" alt="LQG" />
       </a>
       <br />
       <a href="https://lqgstudios.github.io/">https://lqgstudios.github.io/</a>
