--- a/download.html
+++ b/download.html
@@ -50,7 +50,7 @@
       Observera att det går inte att ladda ner mac-versionen än för den är inte
       färdig.
     </p>
-    <a href="RuleOfDivision.rar"><p>Ladda ner för Windows</p></a>
+    <a href="./RuleOfDivision.rar"><p>Ladda ner för Windows</p></a>
     <a href="tyvärr.txt"><p>Ladda ner för Mac</p></a>
 
     <br />
