--- a/guide.html
+++ b/guide.html
@@ -7,57 +7,66 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Guide</title>
   </head>
-<header>
-      <nav class="main-nav">
-        <a href="https://lqgstudios.github.io/" class="lqgFont">
-          <img
-            class="tillLQG"
-            src="icon.png"
-            alt="till lqg-hemsidan"
-          />
-          LQG Studios
-        </a>
+  <header>
+    <nav class="main-nav">
+      <a href="https://lqgstudios.github.io/" class="lqgFont">
+        <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
+        LQG Studios
+      </a>
 
-        <a class="inActive" href="./index.html">Hem</a>
-        <a class="active" href="./guide.html">Spela</a>
+      <a class="inActive" href="./index.html">Hem</a>
+      <a class="active" href="./guide.html">Spela</a>
 
-        <a class="inActive" href="./download.html">Ladda ner spelet</a>
+      <a class="inActive" href="./download.html">Ladda ner spelet</a>
 
-        <a class="inActive" href="./contact.html">Kontakta oss</a>
+      <a class="inActive" href="./contact.html">Kontakta oss</a>
 
-        <a class="inActive" href="./pictures.html">Galleri</a>
-      </nav>
-      <br />
-      <nav class="main-nav-phone-ver">
-        <a href="#home" class="active">Logo</a>
-        <!-- Navigation links (hidden by default) -->
-        <div id="myLinks">
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
-        </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
+      <a class="inActive" href="./pictures.html">Galleri</a>
+    </nav>
+    <br />
+    <nav class="main-nav-phone-ver">
+      <a href="#home" class="active">Logo</a>
+      <!-- Navigation links (hidden by default) -->
+      <div id="myLinks">
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           -->
-      </nav>
-    </header>
+    </nav>
+  </header>
   <body>
-    <h1>Hur du spelar spelet<img src="loggan.png" alt="Logo" class="logo" /></h1>
-    <p>
-      <ul>
+    <h1>
+      Hur du spelar spelet<img src="loggan.png" alt="Logo" class="logo" />
+    </h1>
+    <div style="text-align: left">
+      <ul style="font-size: 1.8rem">
         <li>
           Först och främst behöver du ladda ner spelet, gör det
           <a href="./download.html">här.</a>
-          <li>Alternativt kan du spela spelet på webbsidan <a href="https://ruleofdivision.github.io/play">här.</a>        </li>
-        <li>När du startar spelet kommer du se en meny. Där finns en knapp där det
-        står tutorial, vilket betyder instruktion eller guide. Där kan du lära
-        dig mer om spelet.</li> <li>När du är färdig med den, gå tillbaka till menyn och
-        tryck sedan på knappen för att starta spelet.</li>
+        </li>
+
+        <li>
+          Alternativt kan du spela spelet på webbsidan
+          <a href="https://ruleofdivision.github.io/play">här.</a>
+        </li>
+        <li>
+          När du startar spelet kommer du se en meny. Där finns en knapp där det
+          står tutorial, vilket betyder instruktion eller guide. Där kan du lära
+          dig mer om spelet.
+        </li>
+        <li>
+          När du är färdig med den, gå tillbaka till menyn och tryck sedan på
+          knappen för att starta spelet.
+        </li>
       </ul>
-    </p>
-    <br><br><br><br>    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<br><br>
+    </div>
+    <br /><br /><br /><br />
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+    <br /><br />
     <footer>
       <h3 class="f">Information</h3>
       <p class="f">Studion:</p>
