--- a/index.html
+++ b/index.html
@@ -29,15 +29,8 @@
         <a class="inActive" href="./pictures.html">Galleri</a>
       </nav>
       <br />
-      <nav class="main-nav-phone-ver">
-        <a href="#home" class="active">Logo</a>
-        <!-- Navigation links (hidden by default) -->
-        <div id="myLinks">
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
-        </div>
-      </nav>
+      <br />
+      <br />
     </header>
     <h1>Rule of Division <img src="loggan.png" alt="Logo" class="logo" /></h1>
     <div class="top">
@@ -46,16 +39,20 @@
         <li>
           <ul>
             <!--gör de här till genvägar-->
-            <a href="#intro">Introduktion</a>
+            <a style="color: rgb(49, 141, 222)" href="#intro">Introduktion</a>
           </ul>
           <ul>
-            <a href="#vadLär">Vad lär vi ut? </a>
+            <a style="color: rgb(49, 141, 222)" href="#vadLär"
+              >Vad lär vi ut?
+            </a>
           </ul>
           <ul>
-            <a href="#förLär">För lärare</a>
+            <a style="color: rgb(49, 141, 222)" href="#förLär">För lärare</a>
           </ul>
           <ul>
-            <a href="#undervisning">Hur passar vi in i undervisningen?</a>
+            <a style="color: rgb(49, 141, 222)" href="#undervisning"
+              >Hur passar vi in i undervisningen?</a
+            >
           </ul>
         </li>
       </div>
