--- a/guide.html
+++ b/guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,19 +24,8 @@
       <a class="inActive" href="./pictures.html">Galleri</a>
     </nav>
     <br />
-    <nav class="main-nav-phone-ver">
-      <a href="#home" class="active">Logo</a>
-      <!-- Navigation links (hidden by default) -->
-      <div id="myLinks">
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          -->
-    </nav>
+    <br />
+    <br />
   </header>
   <body>
     <h1>
