--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="se">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -38,7 +38,6 @@
         <h3>Överblick</h3>
         <li>
           <ul>
-            <!--gör de här till genvägar-->
             <a style="color: rgb(49, 141, 222)" href="#intro">Introduktion</a>
           </ul>
           <ul>
@@ -74,32 +73,7 @@
         </div>
       </div>
     </div>
-    <div class="phoneTop">
-      <div class="phoneRectangle">
-        <h3>Överblick</h3>
-        <li>
-          <ul>
-            <!--gör de här till genvägar-->
-            <a href="#intro">Introduktion</a>
-          </ul>
-          <ul>
-            <a href="#vadLär">Vad lär vi ut? </a>
-          </ul>
-          <ul>
-            <a href="#förLär">För lärare</a>
-          </ul>
-          <ul>
-            <a href="#undervisning">Hur passar vi in i undervisningen?</a>
-          </ul>
-        </li>
-      </div>
-      <div class="nyheter">
-        <div class="artikel">
-          <h4>Webbversionen är ute nu!</h4>
-          <a href="https://ruleofdivision.github.io/play">SPELA NU!</a>
-        </div>
-      </div>
-    </div>
+
     <h3 id="intro">Vad handlar spelet om?</h3>
     <p>
       "Rule of Division" är ett roligt sätt för mellanstadieelever att lära sig
