--- a/download.html
+++ b/download.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sv">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,36 +8,25 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <header>
-    <nav class="main-nav">
-      <a href="https://lqgstudios.github.io/" class="lqgFont">
-        <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
-        LQG Studios
-      </a>
+      <nav class="main-nav">
+        <a href="https://lqgstudios.github.io/" class="lqgFont">
+          <img class="tillLQG" src="icon.png" alt="till lqg-hemsidan" />
+          LQG Studios
+        </a>
 
-      <a class="inActive" href="./index.html">Hem</a>
-      <a class="inActive" href="./guide.html">Spela</a>
+        <a class="inActive" href="./index.html">Hem</a>
+        <a class="inActive" href="./guide.html">Spela</a>
 
-      <a class="active" href="./download.html">Ladda ner spelet</a>
+        <a class="active" href="./download.html">Ladda ner spelet</a>
 
-      <a class="inActive" href="./contact.html">Kontakta oss</a>
+        <a class="inActive" href="./contact.html">Kontakta oss</a>
 
-      <a class="inActive" href="./pictures.html">Galleri</a>
-    </nav>
-    <br />
-    <nav class="main-nav-phone-ver">
-      <a href="#home" class="active">Logo</a>
-      <!-- Navigation links (hidden by default) -->
-      <div id="myLinks">
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
-      </div>
-      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links 
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-          -->
-    </nav>
-  </header>
+        <a class="inActive" href="./pictures.html">Galleri</a>
+      </nav>
+      <br />
+      <br />
+      <br />
+    </header>
   <body class="dlBackground">
     <h1>
       Länkar till att ladda ner spelet:<img
