--- a/download.html
+++ b/download.html
@@ -39,7 +39,7 @@
       Observera att det går inte att ladda ner mac-versionen än för den är inte
       färdig.
     </p>
-    <a href="./RuleOfDivision.rar"><p>Ladda ner för Windows</p></a>
+    <a href="./ruleofdivision.rar"><p>Ladda ner för Windows</p></a>
     <a href="tyvärr.txt"><p>Ladda ner för Mac</p></a>
 
     <br />
